[package]
name = "stress-me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
crc = "3.0.1"
humantime = "2.1.0"
rand = "0.8.5"
serde = "1.0.152"
serde_json = "1.0.94"
deser-hjson = "1.1.0"
